kubernetes/base/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: todo-app
  annotations:
    cloud.google.com/backend-config: '{"default": "django-backendconfig"}'  # 👈
spec:
  type: LoadBalancer
  selector:
    app: django-app
  ports:
  - port: 8000
    targetPort: 8000
